syntax = "proto3";

package wallet;

option java_multiple_files = true;
option java_package = "com.example.wallet.grpc";
option java_outer_classname = "WalletProto";

service WalletService {
  rpc DecreaseWallet (DecreaseWalletRequest)
      returns (DecreaseWalletResponse);
}

message DecreaseWalletRequest {
  string orderId = 1;
  string userId  = 2;
  int64 amount   = 3;
}

enum PaymentResult {
  PAYMENT_RESULT_UNSPECIFIED = 0;

  SUCCEED = 1;
  INSUFFICIENT_BALANCE = 2;
  INVALID_PAYMENT = 3;
  FAILED = 4;
}

message DecreaseWalletResponse {
  string orderId = 1;
  string userId  = 2;

  int64 requestedAmount = 3;

  PaymentResult paymentResult = 4;

  int64 beforeBalance = 5;
  int64 afterBalance  = 6;

  bool success = 7;

  string message = 8;
}